--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -62,11 +62,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="120" id="Cek-Iq-9oT" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="120"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="150" id="Cek-Iq-9oT" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Cek-Iq-9oT" id="XuH-IT-5Za">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RYf-Xm-Cdj">
@@ -84,30 +84,61 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cdf-6P-0ds">
-                                            <rect key="frame" x="73" y="25" width="286" height="84"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Tweet content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cdf-6P-0ds">
+                                            <rect key="frame" x="73" y="25" width="286" height="40"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="clR-j3-aQd" userLabel="favButton">
+                                            <rect key="frame" x="320" y="120" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="0Wi-88-DaK"/>
+                                                <constraint firstAttribute="height" constant="30" id="4QN-1Y-xEt"/>
+                                            </constraints>
+                                            <state key="normal" image="favor-icon-1"/>
+                                            <connections>
+                                                <action selector="favoriteTweet:" destination="Cek-Iq-9oT" eventType="touchUpInside" id="EcA-NN-cLI"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8fK-LW-Oh5" userLabel="retweetButton">
+                                            <rect key="frame" x="267" y="120" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="CX8-PT-hJ1"/>
+                                                <constraint firstAttribute="width" constant="30" id="b58-53-NyA"/>
+                                            </constraints>
+                                            <state key="normal" image="retweet-icon-green"/>
+                                            <connections>
+                                                <action selector="retweet:" destination="Cek-Iq-9oT" eventType="touchUpInside" id="LhD-kx-SYk"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="clR-j3-aQd" firstAttribute="top" secondItem="cdf-6P-0ds" secondAttribute="bottom" constant="10" id="5Ak-eg-rkL"/>
                                         <constraint firstItem="RYf-Xm-Cdj" firstAttribute="leading" secondItem="XuH-IT-5Za" secondAttribute="leading" id="8SR-1I-2pD"/>
                                         <constraint firstItem="RYf-Xm-Cdj" firstAttribute="top" secondItem="XuH-IT-5Za" secondAttribute="top" id="BUz-rc-gSe"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="cdf-6P-0ds" secondAttribute="trailing" id="CGg-0P-daW"/>
                                         <constraint firstItem="RYf-Xm-Cdj" firstAttribute="leading" secondItem="XuH-IT-5Za" secondAttribute="leading" id="KIW-XL-QA2"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="clR-j3-aQd" secondAttribute="trailing" constant="10" id="SN0-x8-Sjk"/>
                                         <constraint firstItem="RYf-Xm-Cdj" firstAttribute="leading" secondItem="XuH-IT-5Za" secondAttribute="leading" id="WRV-JL-aba"/>
                                         <constraint firstItem="cdf-6P-0ds" firstAttribute="top" secondItem="uBy-cO-td9" secondAttribute="bottom" constant="4" id="bOO-yj-jZz"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="clR-j3-aQd" secondAttribute="bottom" constant="10" id="buh-84-eDP"/>
                                         <constraint firstItem="RYf-Xm-Cdj" firstAttribute="top" secondItem="XuH-IT-5Za" secondAttribute="top" id="cPt-Dq-Gsz"/>
                                         <constraint firstItem="uBy-cO-td9" firstAttribute="top" secondItem="XuH-IT-5Za" secondAttribute="top" id="cdM-0J-k3R"/>
                                         <constraint firstItem="uBy-cO-td9" firstAttribute="leading" secondItem="RYf-Xm-Cdj" secondAttribute="trailing" constant="8" id="f5I-hR-rti"/>
                                         <constraint firstItem="cdf-6P-0ds" firstAttribute="leading" secondItem="RYf-Xm-Cdj" secondAttribute="trailing" constant="8" id="fbI-oj-SQ1"/>
+                                        <constraint firstItem="clR-j3-aQd" firstAttribute="top" secondItem="cdf-6P-0ds" secondAttribute="bottom" constant="-40" id="hWl-vz-BA1"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="cdf-6P-0ds" secondAttribute="bottom" id="mBc-re-6gP"/>
+                                        <constraint firstItem="clR-j3-aQd" firstAttribute="leading" secondItem="8fK-LW-Oh5" secondAttribute="trailing" constant="10" id="rD8-aL-CLu"/>
+                                        <constraint firstItem="clR-j3-aQd" firstAttribute="leading" secondItem="8fK-LW-Oh5" secondAttribute="trailing" constant="16" id="vay-4O-56M"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="8fK-LW-Oh5" secondAttribute="bottom" constant="10" id="wkI-UQ-BVX"/>
                                         <constraint firstItem="RYf-Xm-Cdj" firstAttribute="top" secondItem="XuH-IT-5Za" secondAttribute="top" id="zUo-ap-thj"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="favButton" destination="clR-j3-aQd" id="Rq3-oY-ISQ"/>
                                     <outlet property="profileImageView" destination="RYf-Xm-Cdj" id="088-o8-QSu"/>
+                                    <outlet property="retweetButton" destination="8fK-LW-Oh5" id="lbb-7x-ORk"/>
                                     <outlet property="tweetContent" destination="cdf-6P-0ds" id="jTw-Wq-heA"/>
                                     <outlet property="userNameLabel" destination="uBy-cO-td9" id="0dt-Da-CwD"/>
                                 </connections>
@@ -125,11 +156,66 @@
                                 <action selector="onLogout:" destination="6Lq-F6-ylQ" id="5xP-D1-Laz"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="Y0A-Nt-hhw">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <segue destination="EOW-Yi-emH" kind="presentation" id="gdI-tw-qLG"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="atg-br-BP9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="829.60000000000002" y="156.97151424287858"/>
+        </scene>
+        <!--Tweet View Controller-->
+        <scene sceneID="Uxx-bo-jDF">
+            <objects>
+                <viewController modalPresentationStyle="fullScreen" id="5jA-y8-wuN" customClass="TweetViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Rqf-VG-tlp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="7dM-mD-kGd">
+                                <rect key="frame" x="0.0" y="44" width="375" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="wrC-Q9-ENE"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="lxM-iF-OdK" firstAttribute="trailing" secondItem="7dM-mD-kGd" secondAttribute="trailing" id="gQ6-lB-8H0"/>
+                            <constraint firstItem="7dM-mD-kGd" firstAttribute="top" secondItem="lxM-iF-OdK" secondAttribute="top" id="kCQ-E3-xwr"/>
+                            <constraint firstItem="7dM-mD-kGd" firstAttribute="leading" secondItem="lxM-iF-OdK" secondAttribute="leading" id="tpv-ll-hL0"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="lxM-iF-OdK"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="7rq-j2-ZYa">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="hU7-6A-ADh">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="cancel:" destination="5jA-y8-wuN" id="729-8e-21T"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="9aB-Ue-Lld">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="tweet:" destination="5jA-y8-wuN" id="MsW-zx-XRL"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tweetTextView" destination="7dM-mD-kGd" id="qNu-if-4sw"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iMr-aI-TIo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2487.1999999999998" y="156.97151424287858"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="dWh-FE-dlb">
@@ -151,5 +237,28 @@
             </objects>
             <point key="canvasLocation" x="-143" y="157"/>
         </scene>
+        <!--Tweet Navigation controller-->
+        <scene sceneID="gVo-r7-qjB">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="EOW-Yi-emH" userLabel="Tweet Navigation controller" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Bb5-C2-drz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.086274509799999996" green="0.52941176469999995" blue="0.65490196079999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="5jA-y8-wuN" kind="relationship" relationship="rootViewController" id="Kdj-CP-zv5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3qF-Kf-dyQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1548" y="156.97151424287858"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="favor-icon-1" width="30" height="30"/>
+        <image name="retweet-icon-green" width="30" height="30"/>
+    </resources>
 </document>
